# email-triage-env

./: .gitignore  Dockerfile  README.md  app.py  inference.py  inference_results.json  openenv.yaml  pyproject.toml  requirements.txt  test_env.py  validate.py  web_app.py
baseline/: inference.py
environment/: core.py  models.py  tasks.py
server/: app.py
