[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email-triage-env"
version = "1.0.0"
description = "OpenEnv compliant email triage environment for AI agents"
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
]

[tool.openenv]
multi-mode-deployment = true
