[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email-triage-env"
version = "1.0.0"
description = "OpenEnv compliant email triage environment for AI agents"
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["environment", "server"]

[tool.openenv]
multi-mode-deployment = true
supported-modes = ["docker", "python"]
